Thu Nov  9 10:50:12 UTC 2006  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/Timer_Heap_T.{h,cpp}:
          Changed the preallocated constructor from int to bool.

Thu Nov  9 09:25:48 UTC 2006  Olli Savia  <ops@iki.fi>

        * ace/TTY_IO.cpp:
          Removed LynxOS 3.x specific workaround.

Wed Nov  8 22:22:27 UTC 2006  Steve Huston  <shuston@riverace.com>

        * bin/make_release: Re-applied this:
          Sat Oct 28 20:10:42 UTC 2006  Steve Huston  <shuston@riverace.com>

Wed Nov  8 22:12:46 UTC 2006  Iliyan Jeliazkov  <iliyan@ociweb.com>

        * ace/Service_Config.cpp:
        * ace/Service_Gestalt.cpp:

        This resolves a problem with shutting down the Service
        Configurator via the static ACE_Service_Config::close () method,
        where the registered services' fini() methods were not being
        called. For full details, see bugzilla# 2701. Thanks to Aaron
        Scamehorn <Aaron dot Scamehorn at cogcap dot com> for discovering
        it an providing a test case.

Wed Nov  8 19:21:17 UTC 2006  William R. Otte  <wotte@dre.vanderbilt.edu>

        * bin/make_release:

          Updates to the release script to work with Subversion.

Mon Nov  6 16:07:43 UTC 2006  Douglas C. Schmidt  <schmidt@dre.vanderbilt.edu>

        * ace/SOCK_IO.h (ACE_SOCK_IO): Clarified the behavior of
          non-blocking I/O.  Thanks to Robert Neumann <robert dot neumann
          at gmail dot com> for motivating this change.

Tue Nov 08 15:40:10 UTC 2006  Martin Corino  <mcorino@remedy.nl>

        * ace/INET_Addr.inl:

          Enhanced operator <() to support IPv6 addresses as well.
          Thanks to Andre Kostur (akostur at incognito dot com) for
          submitting a patch for this.

Wed Nov  8 14:24:02 UTC 2006  J.T. Conklin  <jtc@acorntoolworks.com>

        * configure.ac:

          Change ACE_LACKS_NET_IF_H feature test to #include <sys/types.h>
          (if present).
